# LayoutLMV3

./: .env.dist  .gitignore  Convert_pdf_to_images.py  Label_studio_to_layoutLMV3.py  Label_studio_to_layoutLMV3_no_test.py  README.md  create_LMv3_dataset_with_Pytesseract.py  login.py  main_menu.bat  pyproject.toml
src/: Inference.py  compile_json.cmd  compile_json.py  id2labels.json  inference.cmd  test.py  train_new.py  train_repo.py  train_source.py
